# ZyncMP3-Final

./: CMakeLists.txt  README  ZyncMP3-FinalGit.sln  ZyncMP3-FinalGit.vcxproj  ZyncMP3-FinalGit.vcxproj.filters
cmake/: FindSystemC.cmake
include/: Consumer.h  Filter.h  Producer.h  Testbench.h
src/: Consumer.cpp  Filter.cpp  Producer.cpp  Testbench.cpp  minimp3.cpp  player_alsa.cpp
tcl/: cosim.tcl  csynth.tcl  export.tcl  rtl.tcl  setup.tcl
xillybus/vhdl/: xillydemo-vivado.tcl
xillybus/vhdl/src/: xillydemo.vhd
xillybus/vhdl/vivado/: xillydemo.xpr
